# Compiler_of_C_to_Assemblyx86

./: .gitignore  CMakeLists.txt  Makefile  README.md  Readme.md  Readme.txt  app.py  compiler  exp.cpp  exp.h  gencode.cpp  gencode.h  gencode.hh  imp_interpreter.cpp  imp_interpreter.h  imp_interpreter.hh  imp_type.cpp  imp_type.hh  imp_value.cpp  imp_value.hh  imp_value_visitor.h  imp_value_visitor.hh  main.cpp  packages.txt  parser.cpp  parser.h  scanner.cpp  token.cpp  token.h  type_visitor.cpp  type_visitor.h  type_visitor.hh  visitor.cpp  visitor.h
tests/control/: test1_if.c  test2_if_else.c  test3_while.c  test4_for.c  test5_nested.c  test6_complex_control.c
tests/expressions/: test1_arithmetic.c  test2_comparison.c  test3_complex.c
tests/functions/: test1_simple_function.c  test2_int_function.c  test3_recursive.c
tests/long_int/: test1_long_declaration.c  test2_long_arithmetic.c  test3_long_comparison.c  test4_long_mixed.c  test5_long_function.c
tests/unsigned_int/: test1_unsigned_declaration.c  test2_unsigned_arithmetic.c  test3_unsigned_comparison.c  test4_unsigned_mixed.c  test5_unsigned_overflow.c
tests/variables/: test1_int_declaration.c  test2_bool_declaration.c  test3_mixed_declaration.c
